--- a/css/menu.css
+++ b/css/menu.css
@@ -1,3 +1,60 @@
-.page-header {
-    
+header {
+    width: 99%;
+    height: 10vh;
+    display: flex;
+
+    /* padding: 10px;
+    border: red dashed; */
 }
+
+
+.menu {
+    display: inherit;
+    width: 100%;
+
+    align-items: center;
+}
+
+
+.menu-logo {
+    display: inherit;
+    width: 45%;
+    height: 100%;
+}
+
+
+.menu-logo-image {
+    display: inherit;
+    padding-left: 40%;
+
+    width: 100%;
+    height: 100%;
+}
+
+
+.menu-bar {
+    display: inherit;
+}
+
+
+.menu-bar-item {
+    display: inherit;
+    margin-left: 5px;
+    margin-right: 5px;
+
+    padding: 15px 25px 15px;
+    border-radius: 7px;
+}
+
+
+.menu-bar-item:hover {
+    background-color: rgb(241, 241, 241);
+}
+
+
+.menu-bar-text {
+    color: rgb(44, 39, 39);
+    text-decoration: none;
+    font-size: 1.1rem;
+}
+
