--- a/css/menu.css
+++ b/css/menu.css
@@ -2,6 +2,7 @@ header {
     width: 99%;
     height: 10vh;
     display: flex;
+    background-color: white;
 
     /* padding: 10px;
     border: red dashed; */
