--- a/css/home-first-part.css
+++ b/css/home-first-part.css
@@ -1,7 +1,7 @@
 .first-part {
     display: flex;
     flex-direction: row;
-    padding: 80px;
+    padding: 5rem;
     height: 70vh;
 
     /* outline: green dashed 5px; */
@@ -16,7 +16,6 @@
     height: 100%;
     width: 60%;
     margin-left: 3vw;
-    margin-right: 5vw;
 
     /* outline: red dashed 5px; */
 }
@@ -40,7 +39,7 @@
     align-items: center;
     justify-content: center;
 
-    /* margin: 0px 80px; */
+    margin-right: 10vw;
 
     height: 100%;
     width: 50%;
@@ -53,27 +52,28 @@
     display: block;
     text-align: right;
 
-    width: 600px;
+    width: 62%;
 
     /* outline: blue dashed 3px; */
 }
 
 
 .first-part-headers {
-    margin-top: 10px;
-    margin-bottom: 0px;
     font-size: 3.5rem;
-    padding-top: 0px;
+    padding-top: 0rem;
+    margin-top: 0.65rem;
+    margin-bottom: 0rem;
+
 
     /* outline: blue dashed 1px; */
 }
 
 
 .first-part-header {
-    margin-top: 10px;
-    margin-bottom: 0px;
     font-size: 3.5rem;
-    padding-top: 0px;
+    padding-top: 0rem;
+    margin-top: 0.65rem;
+    margin-bottom: 0rem;
 }
 
 
@@ -81,18 +81,17 @@
     font-size: 1.2rem;
     height: 20rem;
 
-    padding-left: 130px;
-    margin-top: 20px;
-    margin-bottom: 40px;
-
+    padding-left: 8.125rem;
+    margin-top: 1.25rem;
+    margin-bottom: 2.5rem;
 
     /* outline: blue dashed 1px; */
 }
 
 
 .first-part-buttons {
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 1.25rem;
+    margin-bottom: 1.25rem;
 
     /* outline: blue dashed 1px; */
 }
@@ -100,5 +99,5 @@
 
 .part-button {
     display: block;
-    margin: 20px auto;
+    margin: 1.25rem auto;
 }
