--- a/css/menu.css
+++ b/css/menu.css
@@ -26,7 +26,10 @@ header {
 
 .menu-logo-image {
     display: inherit;
-    padding-left: 40%;
+    margin-left: 20%;
+    padding-left: 20%;
+    margin-right: 20%;
+    padding-right: 20%;
 
     width: 100%;
     height: 100%;
