--- a/css/main.css
+++ b/css/main.css
@@ -2,17 +2,25 @@ html {
     font-size: 1rem;
     height: 100%;
     width: 100%;
+}
+
+* {
     margin: 0;
     padding: 0;
 }
 
 
-body {
-    display: block;
+html, body, main {
     height: 100%;
     width: 100%;
-    margin: 0;
-    padding: 0;
-    
+}
+
+
+body {
     background-color: rgb(242, 234, 234);
+}
+
+
+main {
+    display: block;
 }
