--- a/css/blog.css
+++ b/css/blog.css
@@ -2,9 +2,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 30px;
     height: 10vh;
 
-    outline: red 3px dashed;
+    /* outline: red 3px dashed; */
 }
 
 
@@ -17,17 +18,21 @@
 
 .blog-article-content {
     padding: 100px 15vw;
+    height: 30vw;
 
-    outline: blue 3px dashed;
+    /* outline: blue 3px dashed; */
 }
 
 
 .blog-article-buttons {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 40px;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(4, auto);
+    grid-auto-rows: 15vw;
+    row-gap: 10px;
+    column-gap: 50px;
 
-    outline: blue 2px dashed;
+    /* outline: blue 2px dashed; */
 }
 
 
@@ -58,9 +63,20 @@
 
 .blog-article-button-text {
     color: rgb(51, 17, 17);
+    width: 100%;
+    height: 40%;
+    text-align: left;
+}
+
+
+.blog-article-button-header {
     font-size: 1.2rem;
-    text-align: center;
-    /* text-decoration: none; */
-    margin: 0;
+    margin: 0 30px 8px 10px;
+}
+
+
+.blog-article-button-paragraph {
+    font-size: 0.9rem;
+    margin: 8px 30px 8px 10px;
 }
 
