Second part on Home page. A lot of tweaks to fit different screen sizes.

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,5 @@
 html {
     font-size: 1rem;
-    height: 100%;
-    width: 100%;
 }
 
 * {
@@ -23,4 +21,12 @@ body {
 
 main {
     display: block;
+}
+
+
+.part {
+    padding: 4vw calc(30vw - 19.2px * 18);
+    height: 80vh;
+
+    /* outline: green dashed 5px; */
 }
