--- a/css/blog.css
+++ b/css/blog.css
@@ -18,7 +18,7 @@
 
 .blog-article-content {
     padding: 100px 15vw;
-    height: 30vw;
+    /* height: 30vw; */
 
     /* outline: blue 3px dashed; */
 }
