--- a/css/buttons.css
+++ b/css/buttons.css
@@ -1,10 +1,10 @@
 .black-button {
   background-color: #00ff0800;
   width: 100%;
-  aspect-ratio: 10 / 1;
+  aspect-ratio: 8 / 1;
 
   color: black;
-  font-size: 1.7rem;
+  font-size: min(1.5rem, 1.25vw, 2.89vh);
   font-weight: 600;
 
   border: 5px black solid;
@@ -24,10 +24,10 @@
 .blue-button {
     background-color: #0091ff;
     width: 100%;
-    aspect-ratio: 10 / 1;
+    aspect-ratio: 8 / 1;
 
     color: white;
-    font-size: 1.7rem;
+    font-size: min(1.5rem, 1.25vw, 2.89vh);
     font-weight: 600;
 
     border: none;
