--- a/css/home-first-part.css
+++ b/css/home-first-part.css
@@ -1,10 +1,6 @@
 .first-part {
     display: flex;
     flex-direction: row;
-    padding: 5rem;
-    height: 70vh;
-
-    /* outline: green dashed 5px; */
 }
 
 
@@ -15,17 +11,15 @@
 
     height: 100%;
     width: 60%;
-    margin-left: 3vw;
 
     /* outline: red dashed 5px; */
 }
 
 
 .first-part-image {
-    display: inherit;
-
-    max-height: 70%;
-    width: auto;
+    max-width: 80%;
+    max-height: 62%;
+    height: auto;
     border-radius: 25px;
 
     /* outline: red dashed 3px; */
@@ -38,8 +32,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
-    margin-right: 10vw;
 
     height: 100%;
     width: 50%;
@@ -59,29 +51,20 @@
 
 
 .first-part-headers {
-    font-size: 3.5rem;
-    padding-top: 0rem;
-    margin-top: 0.65rem;
-    margin-bottom: 0rem;
-
-
     /* outline: blue dashed 1px; */
 }
 
 
 .first-part-header {
-    font-size: 3.5rem;
-    padding-top: 0rem;
+    font-size: max(2.7rem, 2.25vw, 5.2vh);
     margin-top: 0.65rem;
-    margin-bottom: 0rem;
 }
 
 
 .first-part-par {
-    font-size: 1.2rem;
-    height: 20rem;
+    font-size: max(0.8rem, 0.67vw, 1.54vh);
 
-    padding-left: 8.125rem;
+    padding-left: 3.125vw;
     margin-top: 1.25rem;
     margin-bottom: 2.5rem;
 
