--- a/css/blog.css
+++ b/css/blog.css
@@ -17,9 +17,8 @@
 
 
 .blog-article-content {
-    padding: 100px 15vw;
-    /* height: 30vw; */
-
+    padding: 100px;
+    
     /* outline: blue 3px dashed; */
 }
 
