--- a/css/menu.css
+++ b/css/menu.css
@@ -1,6 +1,8 @@
 header {
     width: 100%;
     height: 10vh;
+    display: flex;
+
     background-color: white;
 
     /* padding: 10px;
@@ -23,6 +25,7 @@ header {
 
 
 .menu-logo-image {
+    display: flex;
     margin-left: 20%;
     padding-left: 20%;
     margin-right: 20%;
@@ -30,6 +33,11 @@ header {
 
     width: 100%;
     height: 100%;
+}
+
+
+.menu-bar {
+    display: flex;
 }
 
 
