--- a/css/blog.css
+++ b/css/blog.css
@@ -24,11 +24,11 @@
 
 
 .blog-article-buttons {
-    height: 100%;
+    /* height: 100%; */
     display: grid;
     grid-template-columns: repeat(3, auto);
-    grid-auto-rows: 20vw;
-    row-gap: 10px;
+    /* grid-auto-rows: 20vw; */
+    row-gap: 50px;
     column-gap: 50px;
 
     /* outline: blue 2px dashed; */
@@ -44,7 +44,7 @@
 
     overflow: hidden;
     width: 20vw;
-    height: 18vw;
+    height: 20vw;
 }
 
 
@@ -55,8 +55,9 @@
 
 .blog-article-button-image {
     width: 100%;
-    height: 50%;
+    height: 35%;
     object-fit: cover;
+    object-position: 0 -20px;
 }
 
 
