--- a/css/footer.css
+++ b/css/footer.css
@@ -3,7 +3,7 @@ footer {
     flex-direction: row;
     justify-content: center;
 
-    background-color: mediumseagreen;
+    background-color: rgba(0, 123, 255, 0.6);
     height: 300px;
     margin-top: 15vh;
 
